// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReaderClient getAddress should respond - success (buffer) 1`] = `
Object {
  "account": PublicKey {
    "_bn": "c51892d0703b31cdf66396ec41f908351cfda218f07c6f5350d767bf040654f4",
  },
  "data": Address {
    "accountType": 5,
    "caseId": "01",
    "category": 16384,
    "risk": 5,
  },
}
`;

exports[`ReaderClient getAddress should respond - success (string) 1`] = `
Object {
  "account": PublicKey {
    "_bn": "c51892d0703b31cdf66396ec41f908351cfda218f07c6f5350d767bf040654f4",
  },
  "data": Address {
    "accountType": 5,
    "caseId": "01",
    "category": 16384,
    "risk": 5,
  },
}
`;

exports[`ReaderClient getAddress should throw - invalid community name 1`] = `"Address not found: \\"2Yy2iSPJv4iEMyNkUX7ydFoufSmyPLMc8P9owJopFRew\\" in network \\"testcoin\\" (7GiNHuwBKg6URcBJXXXRPRtBVgn5q42AiowBEc8uzqBH) in community \\"community404\\" (mJLCqGmUWWDzYcDVHRAjaDJocoPDLzeimfD7KzwnxFh)"`;

exports[`ReaderClient getAddress should throw - malformed 1`] = `"Non-base58 character"`;

exports[`ReaderClient getAddress should throw - not found (buffer) 1`] = `"Address not found: \\"111111111111111111111111111111Hwr\\" in network \\"testcoin\\" (2viJmmn2pEfd6cogyqdDGWS9YkrVdnx87L994Qo3GwLx) in community \\"hapi.one\\" (DgBtqgnzYRsUZP3PhX5rCLfNycTQQ8cp7eMseosUQ4Ja)"`;

exports[`ReaderClient getAddress should throw - not found (string) 1`] = `"Address not found: \\"1111111111111111111111111111114o4\\" in network \\"testcoin\\" (2viJmmn2pEfd6cogyqdDGWS9YkrVdnx87L994Qo3GwLx) in community \\"hapi.one\\" (DgBtqgnzYRsUZP3PhX5rCLfNycTQQ8cp7eMseosUQ4Ja)"`;

exports[`ReaderClient getCase should respond - success 1`] = `
Object {
  "account": PublicKey {
    "_bn": "bc563659f0d64faa3745edf63ead612d47d3ae9f326724afc08388afbe0a90ef",
  },
  "data": Case {
    "accountType": 4,
    "categories": Array [],
    "name": "case0",
    "reporterKey": PublicKey {
      "_bn": "c0fdcf81e4689a79e0cb64d88098f5342910652a340ddc0703dbdb10386dc678",
    },
    "status": 0,
  },
}
`;

exports[`ReaderClient getCase should throw - not found 1`] = `"Invalid case account provided"`;

exports[`ReaderClient getCommunity should respond - success 1`] = `
Object {
  "account": PublicKey {
    "_bn": "bc563659f0d64faa3745edf63ead612d47d3ae9f326724afc08388afbe0a90ef",
  },
  "data": Community {
    "accountType": 1,
    "authority": PublicKey {
      "_bn": "ef37a50404b188a96e10f551122753f8ae8906c4ae0983c92727acf25b38f951",
    },
    "name": "hapi.one",
    "nextCaseId": "02",
  },
}
`;

exports[`ReaderClient getCommunity should throw - not found 1`] = `"Community not found: community404 (mJLCqGmUWWDzYcDVHRAjaDJocoPDLzeimfD7KzwnxFh)"`;

exports[`ReaderClient getNetwork should respond - success 1`] = `
Object {
  "account": PublicKey {
    "_bn": "1c9e2cd47719bf0f4982def71c6a39dff80f7eb1f30cf50d7c28e0a8b12ce295",
  },
  "data": Network {
    "accountType": 2,
    "name": "testcoin",
  },
}
`;

exports[`ReaderClient getNetwork should throw - not found 1`] = `"Network not found: \\"unnetwork\\" (3TGzDJHkCHX5R62wtVh1Jr5TNe775jvSCt8tThbizBKQ) in community \\"hapi.one\\" (DgBtqgnzYRsUZP3PhX5rCLfNycTQQ8cp7eMseosUQ4Ja)"`;

exports[`ReaderClient getNetwork should throw - not found 2`] = `"Network not found: \\"testcoin\\" (7GiNHuwBKg6URcBJXXXRPRtBVgn5q42AiowBEc8uzqBH) in community \\"community404\\" (mJLCqGmUWWDzYcDVHRAjaDJocoPDLzeimfD7KzwnxFh)"`;

exports[`ReaderClient getReporter should respond - success 1`] = `
Object {
  "account": PublicKey {
    "_bn": "e8d90cfe9173301e5ca4c73615c4ff649b8599d5cd8ca4d370c5ac5ecb6ea59c",
  },
  "data": Reporter {
    "accountType": 3,
    "name": "Alice",
    "reporterType": 3,
  },
}
`;

exports[`ReaderClient getReporter should respond - success 2`] = `
Object {
  "account": PublicKey {
    "_bn": "5d0eab4fdb1135df313e7485d099bf91edec7576ca3f0943853a3c0d77b6de29",
  },
  "data": Reporter {
    "accountType": 3,
    "name": "Bob",
    "reporterType": 2,
  },
}
`;

exports[`ReaderClient getReporter should respond - success 3`] = `
Object {
  "account": PublicKey {
    "_bn": "b8d9193b5a70f5cf8932d373ec3e51abb1fe41d2f3a20ba3e579c18eaf1e12a1",
  },
  "data": Reporter {
    "accountType": 3,
    "name": "Carol",
    "reporterType": 1,
  },
}
`;

exports[`ReaderClient getReporter should throw - not found 1`] = `"Reporter not found: \\"49B9UtxhbVBKaToxThwQqshbmf2ZfnuJZX3XGjTsNLvb\\" in community \\"hapi.one\\" (DgBtqgnzYRsUZP3PhX5rCLfNycTQQ8cp7eMseosUQ4Ja)"`;
